--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,36 @@
 <html>
 	<head>
 		<META http-equiv="content-type" content="text/html; charset=utf-8"/>
+        <meta name="author" content="hwren" />
 		<title>{{ page.title }}</title>
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+        <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 	</head>
 	<body>
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <div class="nav-collapse collapse">
+                <ul class="nav">
+                    <li class="active">
+                        <a href="/index.html">
+                            <strong>Hwren's Blog</strong>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="/index.html">
+                            Home
+                        </a>
+                    </li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="container">
 		{{ content }}
+        </div>
 	</body>
 </html>
