--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,29 +9,31 @@
 	</head>
 	<body>
         <div class="navbar navbar-inverse navbar-fixed-top">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li class="active">
-                        <a href="/index.html">
-                            <strong>Hwren's Blog</strong>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/index.html">
-                            Home
-                        </a>
-                    </li>
-                    <li><a href="about.html">About</a></li>
-                </ul>
+            <div class="navbar-inner">
+                <div class="container">
+                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <div class="nav-collapse collapse">
+                        <ul class="nav">
+                            <li class="active">
+                                <a href="/index.html">
+                                    <strong>Hwren's Blog</strong>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="/index.html">Home</a>
+                            </li>
+                            <li><a href="about.html">About</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="container">
-		{{ content }}
+        <div class="main">
+            {{ content }}
         </div>
-	</body>
-</html>
+        </body>
+        </html>
