--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
 		<META http-equiv="content-type" content="text/html; charset=utf-8"/>
         <meta name="author" content="hwren" />
 		<title>{{ page.title }}</title>
+        <link href="/blog/css/main.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-        <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+        <!--<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>-->
 	</head>
 	<body>
         <div class="navbar navbar-inverse navbar-fixed-top">
@@ -32,7 +33,7 @@
                 </div>
             </div>
         </div>
-        <div class="main">
+        <div class="content">
             {{ content }}
         </div>
         </body>
