--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,12 +20,12 @@
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li class="active">
-                                <a href="/index.html">
+                                <a href="/blog/index.html">
                                     <strong>Hwren's Blog</strong>
                                 </a>
                             </li>
                             <li>
-                                <a href="/index.html">Home</a>
+                                <a href="/blog/index.html">Home</a>
                             </li>
                             <li><a href="about.html">About</a></li>
                         </ul>
