--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
                             <li>
                                 <a href="/blog/index.html">Home</a>
                             </li>
-                            <li><a href="about.html">About</a></li>
+                            <li><a href="/blog/about.html">About</a></li>
                         </ul>
                     </div>
                 </div>
