--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<META http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <meta name="author" content="hwren" />
-		<title>{{ page.title }}</title>
-        <link href="/blog/css/main.css" rel="stylesheet">
-        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-        <!--<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>-->
-	</head>
-	<body>
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="navbar-inner">
-                <div class="container">
-                    <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <div class="nav-collapse collapse">
-                        <ul class="nav">
-                            <li class="active">
-                                <a href="/blog/index.html">
-                                    <strong>Hwren's Blog</strong>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="/blog/index.html">Home</a>
-                            </li>
-                            <li><a href="/blog/about.html">About</a></li>
-                        </ul>
-                    </div>
-                </div>
+<head>
+<META http-equiv="content-type" content="text/html; charset=utf-8"/>
+<meta name="author" content="hwren" />
+<title>{{ page.title }}</title>
+<link href="/blog/css/main.css" rel="stylesheet">
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+<!--<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>-->
+</head>
+<body>
+<div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar-inner">
+        <div class="container">
+            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <div class="nav-collapse collapse">
+                <ul class="nav">
+                    <li class="active">
+                    <a href="/blog/index.html">
+                        <strong>Hwren's Blog</strong>
+                    </a>
+                    </li>
+                    <li>
+                    <a href="/blog/index.html">Home</a>
+                    </li>
+                    <li><a href="/blog/about.html">About</a></li>
+                </ul>
             </div>
         </div>
-        <div class="content">
+    </div>
+</div>
+<div class="content">
+    <div class="row-fluid">
+        <div class="span9">
             {{ content }}
         </div>
-        </body>
-        </html>
+        <div class="span3">
+        </div>
+    </div>
+</div>
+</body>
+</html>
