--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,19 @@
 .content{
     padding: 60px 0;
 }
+.article{
+    margin: 20px auto;
+    padding: 15px;
+    border: 1px white solid;
+    background: #F2F2F2;
+    -webkit-box-shadow: 0 1px 10px #A8B1B9;
+    -moz-box-shadow: 0 1px 10px #A8B1B9;
+    box-shadow: 0 1px 10px #58B1B9;
+    text-shadow: 0 1px 1px white;
+    color:#2f2f2f;
+}
+.art_inner{
+    padding: 20px;
+    border: 1px #f2f2f3 solid;
+    background-color: #F8F8F8;
+}
