--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,38 +9,40 @@
 <!--<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>-->
 </head>
 <body>
-<div class="navbar navbar-inverse navbar-fixed-top">
-    <div class="navbar-inner">
-        <div class="container">
-            <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li class="active">
-                    <a href="/blog/index.html">
-                        <strong>Hwren's Blog</strong>
-                    </a>
-                    </li>
-                    <li>
-                    <a href="/blog/index.html">Home</a>
-                    </li>
-                    <li><a href="/blog/about.html">About</a></li>
-                </ul>
+<div id="container">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+            <div class="container">
+                <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="nav-collapse collapse">
+                    <ul class="nav">
+                        <li class="active">
+                        <a href="/blog/index.html">
+                            <strong>Hwren's Blog</strong>
+                        </a>
+                        </li>
+                        <li>
+                        <a href="/blog/index.html">Home</a>
+                        </li>
+                        <li><a href="/blog/about.html">About</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div class="content">
-    <div class="row-fluid">
-        <div class="span8">
-            {{ content }}
-        </div>
-        <div class="span3">
+    <div class="content">
+        <div class="row-fluid">
+            <div class="span8">
+                {{ content }}
+            </div>
+            <div class="span3">
+            </div>
         </div>
     </div>
-</div>
+</div>>
 </body>
 </html>
