--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,18 @@
 ---
 layout: default
 ---
-<div class="article span10 offset2">
-    <div class="art_inner">
-        <h2 class="art_title">
-        </h2>
-        <div class="art_info">
-        </div>
-        <div class="art_summary">
-            {{ content }}
-        </div>
-        <div class="art_foot">
+<div class="row-fluid">
+    <div class="article span10 offset2">
+        <div class="art_inner">
+            <h2 class="art_title">
+            </h2>
+            <div class="art_info">
+            </div>
+            <div class="art_summary">
+                {{ content }}
+            </div>
+            <div class="art_foot">
+            </div>
         </div>
     </div>
 </div>
