--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,13 +5,18 @@ layout: default
     <div class="article span10 offset2">
         <div class="art_inner">
             <h2 class="art_title">
+                <a href="{{ post.url }}">{{ post.title }}</a>
             </h2>
             <div class="art_info">
+                {{ post.date | date_to_string}}
             </div>
             <div class="art_summary">
                 {{ content }}
             </div>
             <div class="art_foot">
+            {% for tag in post.tags%}
+                <span>{{ tag }}</span>
+            {% endfor %}
             </div>
         </div>
     </div>
