--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,10 +5,10 @@ layout: default
     <div class="article span10 offset2">
         <div class="art_inner">
             <h2 class="art_title">
-                <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
+                <a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a>
             </h2>
             <div class="art_info">
-                {{ post.date | date_to_string }}
+                {{ page.date | date_to_string }}
             </div>
             <div class="art_summary">
                 {{ content }}
