--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,6 +14,9 @@ layout: default
                 {{ content }}
             </div>
             <div class="art_foot">
+                {% for tag in page.tags%}
+                <span class="tag"><a href="{{ site.baseurl }}/tag/{{ tag }}">{{ tag }}</a></span>
+                {% endfor %}
             </div>
         </div>
     </div>
